quickwit/quickwit-namespace.yaml
# quickwit-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quickwit
