quickwit/quickwit-service.yaml
# quickwit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickwit-service
  namespace: quickwit
spec:
  selector:
    app: quickwit
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 7280
      targetPort: 7280
